# OpenVINO_Workshop

./: README.md
openvino_face_detection/: CMakeLists.txt  create_vs2017_solution.bat  face_detector.bat
openvino_face_detection/common/: ocv_common.hpp
openvino_face_detection/src/: main.cpp  main_openvino.cpp
